log
Tue 13 Sep 2022 12:52:45 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
ecf4fe3
Tue 13 Sep 2022 12:59:32 AM UTC: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
In file included from test.c:4:
treemap.c:84:12: error: redefinition of ‘minimum’
   84 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
treemap.c:76:12: note: previous definition of ‘minimum’ was here
   76 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
Compilation failed
f027065
Tue 13 Sep 2022 01:00:12 AM UTC: 
 treemap.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  5|6
total_score: 5/70
751ad6f
Tue 13 Sep 2022 01:01:21 AM UTC: 
 treemap.c | 47 ++++++++++++++++++++++-------------------------
 1 file changed, 22 insertions(+), 25 deletions(-)
 tests:  5|6
total_score: 5/70
16b7166
Tue 13 Sep 2022 01:02:03 AM UTC: 
 treemap.c | 89 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 79 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:86:8: error: ‘hijo’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   86 |     if (hijo == 1) node->parent->right = node->left;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
938d940
Tue 13 Sep 2022 01:03:05 AM UTC: 
 treemap.c | 217 +++++++++++++++++++++++++++++++++++++-------------------------
 1 file changed, 129 insertions(+), 88 deletions(-)
 tests:  29|0
total_score: 70/70
8500563
Tue 13 Sep 2022 01:04:39 AM UTC: 
 treemap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  29|0
total_score: 70/70
208da57
Tue 13 Sep 2022 01:05:07 AM UTC: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  29|0
total_score: 70/70
705dd2d
Tue 13 Sep 2022 01:09:34 AM UTC: 
 treemap.c | 77 ++++++++++++++++++++++-----------------------------------------
 1 file changed, 27 insertions(+), 50 deletions(-)
 tests:  29|0
total_score: 70/70
fe78c66
Tue 13 Sep 2022 01:10:26 AM UTC: 
 treemap.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  29|0
total_score: 70/70
7f61a88
